components/policies/kyverno/require-resource-limits/test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-resource-limits
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - policy: require-resource-limits
    rule: require-limits
    resources: [good-with-limits, good-init-with-limits, good-ephemeral-no-limits]
    kind: Pod
    result: pass
  - policy: require-resource-limits
    rule: require-limits
    resources: [bad-no-limits, bad-memory-only, bad-init-no-limits]
    kind: Pod
    result: fail
